--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
       <h1>Adz</h1>
     </header>
     <section>
-      <h2>Articles</h2>
+
       <ul>
+        <li>
+          <a
+            href="https://medium.com/@ItizAdz/accidentally-deleting-the-users-table-and-you-can-too-64ff8f1f3370"
+            >Accidentally deleting the users table — and you can too!</a
+          >
+        </li>
         <li>
           <a
             href="https://medium.com/@ItizAdz/zip-elixir-abusing-protocols-for-triple-dispatch-and-ultimate-flexibility-4c817a5940d6"
@@ -20,7 +26,7 @@
         <li>
           <a
             href="https://medium.com/@ItizAdz/creating-a-has-one-of-association-in-ecto-with-ectomorph-3932adb996d9"
-            >Creating a has_one_of association in Ecto with EctoMorph</a
+            >Creating a has_one_of association in Ecto with EctoMorph AKA Sum Types in Ecto with Postgres</a
           >
         </li>
         <li>
@@ -93,5 +99,15 @@
         >Linkedin</a
       >
     </section>
+        <section>
+          <h2>Referrals</h2>
+          <p>Below are a few referal links for various services I have used. If you are interested in the services, and sign up with the links below you get money off</p>
+          <ul>
+            <li><a href="http://share.habi.to/mve8F62">Habbito Online Mortgage Brokers. £100 Cash reward</a></li>
+            <li><a href="https://share.octopus.energy/grey-ram-632">Octopus Energy. £50 credit each</a></li>
+            <li><a href="https://hired.com/x/a0813f23a1e00972d30f8be9142e856f">Hired - Recruitment Platform UK and USA</a></li>
+            <li><a href="https://triplebyte.com/iv/UN24UBK/cp/matching%20questionnaire">Triplebyte - Really good recruiters for the USA</a></li>
+            </ul>
+        </section>
   </body>
 </html>
