--- a/index.html
+++ b/index.html
@@ -109,5 +109,14 @@
             <li><a href="https://triplebyte.com/iv/UN24UBK/cp/matching%20questionnaire">Triplebyte - Really good recruiters for the USA</a></li>
             </ul>
         </section>
+    <section>
+      <h2>Unrequited Employment</h2>
+      <p>A <sub>Not At All Bitter, Evergrowing</sub> list of companies who rejected me.</p>
+      <ul>
+        <li><a href="https://monzo.com/">Monzo</a></li>
+        <li><a href="https://www.spotify.com/uk/">Spotify</a></li>
+        <li><a href="https://otta.com/">Otta</a></li>
+      </ul>
+    </section>
   </body>
 </html>
