--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </section>
     <section>
       <h2>Unrequited Employment</h2>
-      <p>A <sub>Not At All Bitter, Evergrowing</sub> list of companies who rejected me.</p>
+      <p>A <sub>Not At All Bitter, Evergrowing</sub> list of companies who declined the pleasure or working with me.</p>
       <ul>
         <li><a href="https://monzo.com/">Monzo</a></li>
         <li><a href="https://www.spotify.com/uk/">Spotify</a></li>
