--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
       <ul>
         <li><a href="https://monzo.com/">Monzo</a></li>
         <li><a href="https://www.spotify.com/uk/">Spotify</a></li>
+        <li><a href="https://duffel.com/">Duffel</a></li>
         <li><a href="https://otta.com/">Otta</a></li>
       </ul>
     </section>
