--- a/index.html
+++ b/index.html
@@ -2,122 +2,63 @@
 <html>
   <head>
     <title>Homepage of Adz</title>
+    <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic,700italic,900italic|Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-    <header>
-      <h1>Adz</h1>
+  <section class="content">
+    <header class="header-head">
+      <h1 class="main-heading">ADZ</h1>
     </header>
-    <section>
+    <section class="cards">
+    <div class="card">
+      <h2 class="headline">Blog Posts</h2>
+      <p><a href="https://medium.com/@ItizAdz/zip-elixir-abusing-protocols-for-triple-dispatch-and-ultimate-flexibility-4c817a5940d6">Zips in Elixir — Using protocols for triple dispatch and ultimate flexibility.</a ></p>
+      <p><a href="https://medium.com/@ItizAdz/creating-a-has-one-of-association-in-ecto-with-ectomorph-3932adb996d9">Creating a has_one_of association in Ecto with EctoMorph AKA Sum Types in Ecto with Postgres</a ></p>
+      <p><a href="https://medium.com/@ItizAdz/ecto-cast-ing-sugar-31bddbc62cd7">Ecto Casting Sugar</a></p>
+      <p><a href="https://medium.com/@ItizAdz/ecto-changesets-put-cast-embeds-and-assocs-remember-the-difference-once-and-for-all-10781cc60857?sk=5544b0bd43e87e6852550ffc25e0f4eb">Ecto Changesets — put, cast, embeds and assocs. Remember the difference once and for all!</a ></p>
+      <p><a href="https://tech.nested.com/solving-the-expression-problem-with-elixir-916bb9b5dd74">Solving the expression problem with elixir</a></p>
+      <p><a href="https://tech.nested.com/shape-up-with-elixir-protocols-fc78482ec4fc">Shape up with elixir protocols</a></p>
+      <p><a href="https://medium.com/@ItizAdz/accidentally-deleting-the-users-table-and-you-can-too-64ff8f1f3370">Accidentally deleting the users table — and you can too!</a>
+      <p><a href="https://tech.nested.com/tech-for-the-non-technical-refactoring-2f80106db689">Tech for the non technical - Refactoring</a></p>
+      <p><a href="https://tech.nested.com/mentorship-at-nested-part-2-coaching-16ff5357e927"> Mentorship at Nested part 2: Coaching</a>
+      <p><a href="https://medium.com/@ItizAdz/mentorship-at-nested-part-1-a-call-to-arms-5d9fa441e466"> Mentorship at nested part 1: A call to arms</a>
+    </div>
 
-      <ul>
-        <li>
-          <a
-            href="https://medium.com/@ItizAdz/accidentally-deleting-the-users-table-and-you-can-too-64ff8f1f3370"
-            >Accidentally deleting the users table — and you can too!</a
-          >
-        </li>
-        <li>
-          <a
-            href="https://medium.com/@ItizAdz/zip-elixir-abusing-protocols-for-triple-dispatch-and-ultimate-flexibility-4c817a5940d6"
-            >Zips in Elixir — Using protocols for triple dispatch and ultimate
-            flexibility.</a
-          >
-        </li>
-        <li>
-          <a
-            href="https://medium.com/@ItizAdz/creating-a-has-one-of-association-in-ecto-with-ectomorph-3932adb996d9"
-            >Creating a has_one_of association in Ecto with EctoMorph AKA Sum Types in Ecto with Postgres</a
-          >
-        </li>
-        <li>
-          <a href="https://medium.com/@ItizAdz/ecto-cast-ing-sugar-31bddbc62cd7"
-            >Ecto Casting Sugar</a
-          >
-        </li>
-        <li>
-          <a
-            href="https://medium.com/@ItizAdz/ecto-changesets-put-cast-embeds-and-assocs-remember-the-difference-once-and-for-all-10781cc60857?sk=5544b0bd43e87e6852550ffc25e0f4eb"
-            >Ecto Changesets — put, cast, embeds and assocs. Remember the
-            difference once and for all!</a
-          >
-        </li>
-        <li>
-          <a
-            href="https://tech.nested.com/mentorship-at-nested-part-2-coaching-16ff5357e927"
-            >Mentorship at Nested part 2: Coaching</a
-          >
-        </li>
-        <li>
-          <a
-            href="https://medium.com/@ItizAdz/mentorship-at-nested-part-1-a-call-to-arms-5d9fa441e466"
-            >Mentorship at nested part 1: A call to arms</a
-          >
-        </li>
-        <li>
-          <a
-            href="https://tech.nested.com/solving-the-expression-problem-with-elixir-916bb9b5dd74"
-            >Solving the expression problem with elixir</a
-          >
-        </li>
-        <li>
-          <a
-            href="https://tech.nested.com/shape-up-with-elixir-protocols-fc78482ec4fc"
-            >Shape up with elixir protocols</a
-          >
-        </li>
-        <li>
-          <a
-            href="https://tech.nested.com/tech-for-the-non-technical-refactoring-2f80106db689"
-            >Tech for the non technical - Refactoring</a
-          >
-        </li>
-        <li>
-          <a
-            href="https://medium.com/@ItizAdz/back-to-front-end-ii-73e5c881d287"
-            >Back to front(end) II</a
-          >
-        </li>
-        <li>
-          <a href="https://medium.com/@ItizAdz/back-to-front-end-b22cbf2c30a3"
-            >Back to front(end)</a
-          >
-        </li>
-        <li>
-          <a href="https://medium.com/@ItizAdz/currying-in-java-ede80823f339"
-            >Currying</a
-          >
-        </li>
-        <li>
-          <a
-            href="https://blog.makersacademy.com/all-the-tests-you-cannot-see-3191a4109cfe"
-            >All the tests you cannot see</a
-          >
-        </li>
-      </ul>
-      <a href="https://twitter.com/ItizAdz">Twitter</a>
-      <a href="https://www.linkedin.com/in/adam-lancaster-9845a23a/"
-        >Linkedin</a
-      >
+    <div class="card">
+      <h2 class="headline">Open Source Projects</h2>
+      <p><a href="https://github.com/Adzz/ecto_morph">Ecto Morph - A utility Library for Ecto.</a></p>
+      <p><a href="https://www.ex-ample.co.uk/">Elixir by Ex-ample - a website with bite size elixir recipies.</a></p>
+      <p><a href="https://github.com/Adzz/gcp_secret_provider">GCP config provider - a way to load GCP secrets into your elixir apps on start up.</a></p>
+      <p><a href="https://github.com/elixir-lang/elixir/pull/10419">Contributed Enum.zip_with/3 and Stream.zip_with/3 to Elixir</a></p>
+      <p><a href="https://github.com/Adzz/ex_ample">Tutorial Repo to help get up to speed with Graphql in Elixir.</a></p>
+
+    </div>
+    <section class="links">
+      <a href="https://twitter.com/ItizAdz">Twitter&nbsp;</a>
+      <a href="https://www.linkedin.com/in/adam-lancaster-9845a23a/">Linkedin</a>
     </section>
-        <section>
-          <h2>Referrals</h2>
-          <p>Below are a few referal links for various services I have used. If you are interested in the services, and sign up with the links below you get money off</p>
-          <ul>
-            <li><a href="http://share.habi.to/mve8F62">Habbito Online Mortgage Brokers. £100 Cash reward</a></li>
-            <li><a href="https://share.octopus.energy/grey-ram-632">Octopus Energy. £50 credit each</a></li>
-            <li><a href="https://hired.com/x/a0813f23a1e00972d30f8be9142e856f">Hired - Recruitment Platform UK and USA</a></li>
-            <li><a href="https://triplebyte.com/iv/UN24UBK/cp/matching%20questionnaire">Triplebyte - Really good recruiters for the USA</a></li>
-            </ul>
-        </section>
-    <section>
-      <h2>Unrequited Employment</h2>
-      <p>A <sub>Not At All Bitter, Evergrowing</sub> list of companies who declined the pleasure or working with me.</p>
-      <ul>
-        <li><a href="https://monzo.com/">Monzo</a></li>
-        <li><a href="https://www.spotify.com/uk/">Spotify</a></li>
-        <li><a href="https://duffel.com/">Duffel</a></li>
-        <li><a href="https://otta.com/">Otta</a></li>
-      </ul>
     </section>
+    </section>
+    <footer class="footer">
+<!--       <section class="footer-section">
+        <h4>Referrals</h4>
+        <p class="spiel">Below are a few referral links for various services I have used. If you are interested in the services, and sign up with the links below you get money off</p>
+        <p><a href="http://share.habi.to/mve8F62">Habbito Online Mortgage Brokers. £100 Cash reward</a></p>
+        <p><a href="https://share.octopus.energy/grey-ram-632">Octopus Energy. £50 credit each</a></p>
+        <p><a href="https://hired.com/x/a0813f23a1e00972d30f8be9142e856f">Hired - Recruitment Platform UK and USA</a></p>
+        <p><a href="https://triplebyte.com/iv/UN24UBK/cp/matching%20questionnaire">Triplebyte - Really good recruiters for the USA</a></p>
+      </section> -->
+      <!-- <section class="footer-section"> -->
+      <!--   <h5>Unrequited Employment</h5>
+        <p>A <sub>Not At All Bitter, Ever growing</sub> list of companies who declined the pleasure or working with me.</p>
+        <ul>
+          <li><a href="https://monzo.com/">Monzo</a></li>
+          <li><a href="https://www.spotify.com/uk/">Spotify</a></li>
+          <li><a href="https://duffel.com/">Duffel</a></li>
+          <li><a href="https://otta.com/">Otta</a></li>
+        </ul> -->
+    <!-- </section> -->
+    </footer>
   </body>
 </html>
