Add github link

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <p><a href="https://github.com/Adzz/ex_ample">Tutorial Repo to help get up to speed with Graphql in Elixir.</a></p>
     </div>
     <section class="links">
+      <a href="https://github.com/Adzz">Github&nbsp;</a>
       <a href="https://twitter.com/ItizAdz">Twitter&nbsp;</a>
       <a href="https://www.linkedin.com/in/adam-lancaster-9845a23a/">Linkedin</a>
     </section>
